[release] Release new version.